--- a/FrontEnd/agendacar/src/Pages/Cliente/AgendarNovoCliente/style.css
+++ b/FrontEnd/agendacar/src/Pages/Cliente/AgendarNovoCliente/style.css
@@ -1,99 +1,42 @@
 
-.AgendarHorario{
-   background-color: var(--blue);
-   min-width: 80%;
-   min-height: 70vh;
-   margin-top: 10px;
-   border-radius: 5px;
-   display: flex;
-   flex-direction: column;
-}
 
-
-.content{
-   display: flex;
-   justify-content: center;
-   width: 100%;
-   height: 85vh;
-   
-}
-
-.cadas{
-   display: flex;
-   justify-content: center;
-   background-color: var(--blue);
-   width: 50vw;
-   border-radius: 2%;
-}
-
-
-
-.inf{
-   font-weight: bold;
-   margin-top: 20px;
-}
-
-.inf1{
-   font-weight: bold;
-   margin-left: 27px;
-}
-
-.inf2{
-   font-weight: bold;
-   margin-left: 56px;
-}
-
-.inf3{
-   font-weight: bold;
-   margin-left: 27px;
-}
-
-.cor{
-   margin-left: 25px;
-   width: 10vw;
-}
-
-.infocar{
+.conteinerCentralAgendar {
    display: flex;
    justify-content: space-around;
+   background-color: var(--blue);
+   width: 50vw;
+   border-radius: 7px;
+   flex-direction: column;
+   align-items: center;
+   min-height: 88vh;
 }
 
-.marc{
-   width: 10vw;
+.containerDadosCarro{
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+   align-items: center;
 }
 
-.anos{
+
+.divInput1{
    display: flex;
    flex-direction: row;
+   width: 70%;
+   align-items: center;
+   justify-content: space-between;
 }
 
-.fab{
-   width: 10vw;
-   margin-left: 25px;
+.divInput1 > label{
+   width: 45%;
+}
+.divInput1 > label > input, .divInput1 > label > select {
+   height: 100%;
 }
 
-.vers{
-   width: 10vw;
-   margin-left: 55px;
-}
-
-.marq{
+.containerDadosHorario{
+   width: 100%;
    display: flex;
-   justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
-   height: 30vh;
-   width: 29vw;
-   margin-top: 50px;
-   margin-left: 15px;
-}
-
-.dat{
-   width: 11vw;
-   margin-right: 15px;
-}
-
-.datetime{
-   margin-right: 8px;
-   font-weight: bolder;
 }
