--- a/FrontEnd/agendacar/src/Pages/Cliente/Cadastrar/styles.css
+++ b/FrontEnd/agendacar/src/Pages/Cliente/Cadastrar/styles.css
@@ -16,14 +16,18 @@
     width: 90%;
     display: flex;
     justify-content: space-between;
+
+    height: 11vh;
 }
 
 .containerCadastrar > div > label {
     width: 45%;
+
 }
 
 .containerCadastrar > div > label > input {
     height: 60%;
+
 }
 
 .adicionarFotoCadastrar{
