--- a/FrontEnd/agendacar/src/Pages/Cliente/InformacoesUsuario/styles.css
+++ b/FrontEnd/agendacar/src/Pages/Cliente/InformacoesUsuario/styles.css
@@ -65,14 +65,22 @@
     display: flex;
     width: 90%;
     justify-content: space-between;
+    align-items: center;
 } 
 
 .containerComAsInformacoes > div > label {
     width: 48%;
 }
+
 .divBtnsInfo{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     margin-top: 30px;
+}
+
+.containerComAsInformacoes > div > button {
+    margin-top: 20px;
+    height: 57%;
+    margin-right: 25%;
 }
