alterar senha conectada entra backend e frontend

--- a/FrontEnd/agendacar/src/Pages/Cliente/InformacoesUsuario/styles.css
+++ b/FrontEnd/agendacar/src/Pages/Cliente/InformacoesUsuario/styles.css
@@ -79,7 +79,7 @@
     margin-top: 30px;
 }
 
-.containerComAsInformacoes > div > button {
+.linkInfoUsuario {
     margin-top: 20px;
     height: 57%;
     margin-right: 25%;
