--- a/FrontEnd/agendacar/src/Pages/Geral/EsqueceuSenha/EnviarCodigo/styles.css
+++ b/FrontEnd/agendacar/src/Pages/Geral/EsqueceuSenha/EnviarCodigo/styles.css
@@ -48,3 +48,19 @@
 .divBtnsEnviarCodigo > button {
     margin-right: 20px;
 }
+
+.divImagemUsuarioEnviarCodigo{
+    height: 100%;
+    width: 55%;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    background-color: chocolate;
+    margin-bottom: 10px;
+}
+
+.divImagemUsuarioEnviarCodigo > img {
+    height: 100%;
+    width: 100%;
+    border-radius: 100%;
+}
