--- a/FrontEnd/agendacar/src/Pages/Funcionario/MenuFuncionario/styles.css
+++ b/FrontEnd/agendacar/src/Pages/Funcionario/MenuFuncionario/styles.css
@@ -1,8 +1,38 @@
 .containerMenuFuncionario{
-    height: 43vh;
+    height: 30vh;
     width: 90%;
     display: flex;
     justify-content: space-evenly;
     margin-top: 1%;
     text-align: center;
+}
+
+.containerAreaDoAdmin{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:  rgba(121, 115, 115, 0.7);
+    position: fixed;
+}
+
+.divInfoArea{
+    width: 50%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--blue);
+    text-align: center;
+    border-radius: 5px;
+}
+
+.divBtnsAreaAdmin{
+    display: flex;
+    width: 50%;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 3%;
 }
